Pre-allocate join maps in the hard-coded benchmarks